--- a/OHET_Project/OHET_Project/Views/Home/Content.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Content.cshtml
@@ -13,7 +13,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Classes")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Classes", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Classes", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
@@ -30,7 +31,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Rules")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Rules", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Rules", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
@@ -47,7 +49,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Adventures")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Adventures", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Adventures", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
@@ -64,7 +67,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Items")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Items", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Items", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
@@ -81,7 +85,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Spells")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Spells", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Spells", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
@@ -98,7 +103,8 @@
                         </header>
                         <p></p>
                         <footer class="align-center">
-                            <a href="@Url.Action("Index", "Monsters")" class="button alt">Wybierz</a>
+                            <a href="@Url.Action("Index", "Monsters", new {isOff = true})" class="button alt">Official</a>
+                            <a href="@Url.Action("Index", "Monsters", new {isOff = false})" class="button alt">Homebrew</a>
                         </footer>
                     </div>
                 </div>
