Back to List is working again.

--- a/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 </div>
 
 @section Scripts {
