--- a/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
@@ -56,5 +56,5 @@
     </table>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff})
 </p>
