--- a/OHET_Project/OHET_Project/Views/Adventures/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Adventures/Details.cshtml
@@ -37,5 +37,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 </p>
