--- a/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 </div>
 
 @section Scripts {
