--- a/OHET_Project/OHET_Project/Views/Monsters/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Details.cshtml
@@ -45,5 +45,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 </p>
