--- a/OHET_Project/OHET_Project/Views/Spells/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Details.cshtml
@@ -53,5 +53,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
 </p>
