--- a/OHET_Project/OHET_Project/Views/Spells/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Edit.cshtml
@@ -65,9 +65,18 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
-</div>
+@if (Model.Content.ApplicationUserId == ViewBag.userId)
+{
+    <div>
+        @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+    </div>
+}
+else
+{
+    <div>
+        @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
+    </div>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
