Partially removed Lorem Ipsum from homepage & revisualized list of articles.

--- a/OHET_Project/OHET_Project/Views/Home/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Index.cshtml
@@ -21,8 +21,8 @@
 <section id="two" class="wrapper style3">
     <div class="inner">
         <header class="align-center">
-            <p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-            <h2>Morbi maximus justo</h2>
+            <p>The official site for the greatest heroic role-playing game</p>
+            <h2>OHET Legacy</h2>
         </header>
     </div>
 </section>
@@ -31,8 +31,8 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
-            <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-            <h2>Morbi maximus justo</h2>
+            <p class="special">Outstanding Heroes & Extraordinary Threats</p>
+            <h2>About the book</h2>
         </header>
         <div class="gallery">
             <div>
@@ -42,13 +42,30 @@
             </div>
             <div>
                 <div class="image fit">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
-
-                    Aliquam volutpat mollis neque sed mattis. Quisque lacinia commodo tortor, at tempor metus laoreet nec. Donec ut bibendum magna, in tincidunt tortor. Suspendisse porta libero sit amet leo mollis, id lobortis odio molestie. Suspendisse eu porttitor risus, eu elementum justo. Vivamus consectetur nunc ante, auctor sagittis eros consectetur porta. Proin rutrum porttitor felis et gravida. Donec quam dolor, maximus a metus vel, pharetra sodales lectus. Integer nec diam id tortor molestie fermentum eget ac leo. Nam dictum lacinia augue, eu rutrum orci porttitor a. Donec in tortor maximus, euismod lectus sed, ultrices orci.
-
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
-
-                    Aliquam volutpat mollis neque sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <p>
+                        <b>What is that game?</b>
+                        <br/>
+                        Outstanding Heroes and Extraordinary Threats is a heroic fantasy tabletop
+                        game that requires the use of paper, pencils, dice – and most of all – words.
+                        Useful will be also imagination and a few hours of time.
+                    </p>
+                    <p>
+                        <b>What is that game about?</b>
+                        <br />
+                        Outstanding Heroes and Extraordinary Threats is a game about fighting
+                        monsters, facing challenges, stopping disasters and getting rewarded for
+                        these deeds.
+                    </p>
+                    <p>
+                        <b>What is inside this book?</b>
+                        <br />
+                        You’re getting quick game rules that support a story about heroes and
+                        their adventures told by the players. In that game the story about courage,
+                        fight and wealth is the priority, and the rules facilitate its creation and
+                        development. The Outstanding Heroes and Extraordinary Threats draws
+                        inspiration from classical roleplaying games and allows to reuse the
+                        themes known from the literature.
+                    </p>
                 </div>
             </div>
         </div>
