--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -4,46 +4,63 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <header class="align-center">
+            <h2>Classes</h2>
+        </header>
+        <footer class="align-center">
+            @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Create", "Classes")" class="button alt">Create Class</a>
+            }
+        </footer>
+    </div>
+</section>
 
-<p>
-    @Html.ActionLink("Create New", "Create", new { isOff = ViewBag.isOff })
-</p>
-<table class="table">
-@foreach (var item in Model.OrderBy(x => x.name)) {
-    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
-            @if (@item.description.Split().ToArray().Length <= 20)
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+            @foreach (var item in Model.OrderBy(x => x.name))
             {
-                <td>
-                    @item.description
-                </td>
+                if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
+                {
+                    <div>
+                        <div class="box">
+                            <div class="image fit">
+                                <img src='@Url.Action("ShowClass", "Image", new { id = item.IDClass })' alt='' />
+                            </div>
+                            <div class="content">
+                                <header class="align-center">
+                                    @if (item.isSpellcaster)
+                                    {
+                                        <p>Spellcaster</p>
+                                    }
+                                    <h2>@item.name</h2>
+                                </header>
+                                <p class="align-center">
+                                    @if (@item.description.Split().ToArray().Length <= 20)
+                                    {
+                                        @item.description
+                                    }
+                                    else
+                                    {
+                                        @(String.Join(" ", @item.description.Split().Take(20))+"...")
+                                    }
+                                </p>
+                                <footer class="align-center">
+                                    <a href="@Url.Action("Details", "Classes", new { id = item.IDClass })" class="button alt">Details</a>
+                                    @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
+                                    {
+                                        <a href="@Url.Action("Edit", "Classes", new { id = item.IDClass })" class="button alt">Edit</a>
+                                        <a href="@Url.Action("Delete", "Classes", new { id = item.IDClass })" class="button alt">Delete</a>
+                                    }
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                }
             }
-            else
-            {
-                <td>
-                    @String.Join(" ", @item.description.Split().Take(20))
-                    @Html.ActionLink("...", "Details", new { id = item.IDClass })
-                </td>
-            }
-            <td>
-                @Html.DisplayFor(modelItem => item.isSpellcaster)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id = item.IDClass })
-            </td>
-            @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
-            {
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.IDClass }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.IDClass })
-                </td>
-            }
-        </tr>
-    }
-}
-</table>
+        </div>
+    </div>
+</section>
