--- a/OHET_Project/OHET_Project/Views/Adventures/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Adventures/Index.cshtml
@@ -7,7 +7,14 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
-            <h2>Adventures</h2>
+            @if (ViewBag.isOff)
+            {
+                <h2>Official Adventures</h2>
+            }
+            else
+            {
+                <h2>Homebrew Adventures</h2>
+            }
         </header>
         @using (Html.BeginForm())
         {
