--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -7,7 +7,14 @@
 <section id="three" class="wrapper style2">
     <div class="inner">
         <header class="align-center">
-            <h2>Classes</h2>
+            @if (ViewBag.isOff)
+            {
+                <h2>Official Classes</h2>
+            }
+            else
+            {
+                <h2>Homebrew Classes</h2>
+            }
         </header>
         <footer class="align-center">
             @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
