--- a/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Rules/Index.cshtml
@@ -4,65 +4,72 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create", new { isOff = ViewBag.isOff })
-</p>
-
-@using (Html.BeginForm())
-{
-    <p>
-        Find by name: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" class="btn btn-default" />
-        @Html.ActionLink("Clear", "Index", new { isOff = ViewBag.isOff })
-    </p>
-}
-
-<table class="table">
-    @*
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.description)
-        </th>
-        <th></th>
-    </tr>
-    *@
-@foreach (var item in Model.OrderBy(x => x.title)) {
-    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
-    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        @if (@item.description.Split().ToArray().Length <= 20)
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <header class="align-center">
+            @if (ViewBag.isOff)
+            {
+                <h2>Official Rules</h2>
+            }
+            else
+            {
+                <h2>Homebrew Rules</h2>
+            }
+        </header>
+        @using (Html.BeginForm())
         {
-            <td>
-                @item.description
-            </td>
+            <p>
+                Find by name: @Html.TextBox("SearchString")
+                <input type="submit" value="Search" class="btn btn-default" />
+                <a href="@Url.Action("Index", "Rules", new { isOff = ViewBag.isOff })" class="button alt">Clear</a>
+            </p>
         }
-        else
-        {
-            <td>
-                @String.Join(" ", @item.description.Split().Take(20))
-                @Html.ActionLink("...", "Details", new { id = item.IDRule })
-            </td>
-        }
-        <td>
-            @Html.ActionLink("Details", "Details", new { id = item.IDRule })
-        </td>
-        @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
-        {
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.IDRule }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.IDRule })
-            </td>
-        }
-    </tr>
-    }
-}
+        <footer class="align-center">
+            @if (User.IsInRole("User") || User.IsInRole("Editor") || User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Create", "Rules", new { isOff = ViewBag.isOff })" class="button alt">Create Rule</a>
+            }
+        </footer>
+    </div>
+</section>
 
-</table>
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+            @foreach (var item in Model.OrderBy(x => x.title))
+            {
+                if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
+                {
+                    <div>
+                        <div class="box">
+                            <div class="content">
+                                <header class="align-center">
+                                    <p></p>
+                                    <h2>@item.title</h2>
+                                </header>
+                                <p class="align-center">
+                                    @if (@item.description.Split().ToArray().Length <= 20)
+                                    {
+                                        @item.description
+                                    }
+                                    else
+                                    {
+                                        @(String.Join(" ", @item.description.Split().Take(20)) + "...")
+                                    }
+                                </p>
+                                <footer class="align-center">
+                                    <a href="@Url.Action("Details", "Rules", new { id = item.IDRule })" class="button alt">Details</a>
+                                    @if (@item.Content.ApplicationUserId == ViewBag.userId || User.IsInRole("Admin"))
+                                    {
+                                        <a href="@Url.Action("Edit", "Rules", new { id = item.IDRule })" class="button alt">Edit</a>
+                                        <a href="@Url.Action("Delete", "Rules", new { id = item.IDRule })" class="button alt">Delete</a>
+                                    }
+                                </footer>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+    </div>
+</section>
