--- a/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
@@ -4,60 +4,43 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Monster</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special"></p>
+                <h2>Monster Creation</h2>
+            </header>
+        </div>
+        @using (Html.BeginForm("Create", "Monsters", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="12u$">
+                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", placeholder = "Name" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+            <br />
+            <div class="12u$">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", placeholder = "Description" } })
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.conceptLvl, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.conceptLvl, new { htmlAttributes = new { @class = "form-control" } })
+            <br />
+            <div class="12u$">
+                @Html.EditorFor(model => model.conceptLvl, new { htmlAttributes = new { @class = "form-control", placeholder = "Concept Level", type = "text" } })
                 @Html.ValidationMessageFor(model => model.conceptLvl, "", new { @class = "text-danger" })
             </div>
-        </div>
-        @*
-        <div class="form-group">
-            @Html.LabelFor(model => model.IDContent, "IDContent", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IDContent", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDContent, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        *@
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
-</div>
+            <br />
+
+            <footer class="align-center">
+                <button type="submit" class="button alt">Create</button>
+            </footer>
+        }
+    </div>
+    <div class="align-center">
+        @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
+    </div>
+</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
