Revisualized deletion of content.

--- a/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Create.cshtml
@@ -9,7 +9,7 @@
         <div class="inner">
             <header class="align-center">
                 <p class="special"></p>
-                <h2>Class Creation</h2>
+                <h2>Create Class</h2>
             </header>
         </div>
         @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
