--- a/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Create.cshtml
@@ -9,7 +9,7 @@
         <div class="inner">
             <header class="align-center">
                 <p class="special"></p>
-                <h2>Monster Creation</h2>
+                <h2>Create Monster</h2>
             </header>
         </div>
         @using (Html.BeginForm("Create", "Monsters", FormMethod.Post, new { enctype = "multipart/form-data" }))
