--- a/OHET_Project/OHET_Project/Views/Adventures/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Adventures/Create.cshtml
@@ -9,7 +9,7 @@
         <div class="inner">
             <header class="align-center">
                 <p class="special"></p>
-                <h2>Adventure Creation</h2>
+                <h2>Create Adventure</h2>
             </header>
         </div>
         @using (Html.BeginForm())
