--- a/OHET_Project/OHET_Project/Views/Monsters/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Delete.cshtml
@@ -4,44 +4,39 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <div class="inner">
+            <header class="align-center">
+                <p class="special">Are you sure you want to delete this monster?</p>
+                <h2>Delete Monster</h2>
+            </header>
+        </div>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+            <div class="12u$">
+                Name
+                @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+            </div>
+            <br />
+            <div class="12u$">
+                Concept Level
+                <input type="text" value="@Model.conceptLvl" disabled="disabled" />
+            </div>
+            <br />
+            <div class="12u$">
+                Description
+                @Html.TextAreaFor(model => model.description, new { @class = "form-control", disabled = "disabled", @rows = 12 })
+            </div>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Monster</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
+            <br />
 
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.conceptLvl)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.conceptLvl)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <footer class="align-center">
+                <input type="submit" value="Delete" class="btn btn-default" />
+            </footer>
+        }
+        <div class="align-center">
             @if (Model.Content.ApplicationUserId == ViewBag.userId)
             {
                 @Html.ActionLink("Back to List", "Index", new { isOff = ViewBag.isOff })
@@ -51,5 +46,5 @@
                 @Html.ActionLink("Back to List", "Details", "Contents", new { id = Model.IDContent }, new { })
             }
         </div>
-    }
-</div>
+    </div>
+</section>
