--- a/OHET_Project/OHET_Project/Views/Spells/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Create.cshtml
@@ -9,7 +9,7 @@
         <div class="inner">
             <header class="align-center">
                 <p class="special"></p>
-                <h2>Spell Creation</h2>
+                <h2>Create Spell</h2>
             </header>
         </div>
         @using (Html.BeginForm())
